# winharpoon

./: .gitignore  Cargo.toml  README.md  build.rs  mise.toml
.github/workflows/: release.yml
graphify-out/: .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
installer/: winharpoon.iss
scripts/: build-installer.ps1
src/: app.rs  autostart.rs  config.rs  hotkeys.rs  log.rs  main.rs  native_ui.rs  paths.rs  platform.rs  util.rs
src/apps/: app_paths.rs  apps_folder.rs  cache.rs  controller.rs  enumerate.rs  favorites.rs  hook.rs  launch.rs  mod.rs  panel.rs  search.rs  view.rs
src/icons/: cache.rs  extract.rs  mod.rs  ui_icons.rs
src/launcher/: controller.rs  mod.rs  panel.rs  ui.rs  view.rs
src/marks_switcher/: hook.rs  mod.rs  panel.rs  ui.rs  view.rs
src/modes/: marks.rs  mod.rs  same_app.rs
src/settings/: controller.rs  mod.rs  panel.rs  service.rs  ui.rs  view.rs
src/tray/: controller.rs  mod.rs  panel.rs  ui.rs  view.rs
src/ui/: app.rs  chord.rs  list.rs  mod.rs  overlay.rs
src/ui/components/: chord_button.rs  menu_row.rs  mod.rs  overlay_panel.rs  search_list_row.rs  selection_bar.rs
src/window/: enumerate.rs  focus.rs  identity.rs  mod.rs  process_name.rs
